# CppJSClaude

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  demo.cpp  demo.sh  demo_multiline.sh  enhanced_demo.cpp  setup_v8.sh  test.sh  test_commands.txt
Include/: ClaudeConsole.h  README.md
Source/: ClaudeConsole.cpp  Main.cpp  README.md
Tests/: CMakeLists.txt  TestAliasSystem.cpp  TestClaudeConsole.cpp  TestCommandExecution.cpp  TestConfiguration.cpp  TestMultilineMode.cpp  TestPromptManagement.cpp  TestUtilities.cpp  cll_tests  enhanced_demo.cpp
include/: ClaudeConsole.h  README.md
src/: ClaudeConsole.cpp  README.md  main.cpp
